# depression_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requiremets.txt
data/gold/: distilroberta_features_test.csv  distilroberta_knn.pkl  distilroberta_lgbm.pkl  distilroberta_logreg.pkl  distilroberta_naivebayes.pkl  distilroberta_rf.pkl  distilroberta_svm.pkl  distilroberta_xgboost.pkl  manual_features_test.csv  (+24 more)
models/: AdaBoost_manual_only.pkl  Decision Tree_manual_only.pkl  Gradient Boosting_manual_only.pkl  K-Nearest Neighbors_both.pkl  Logistic Regression_both.pkl  Naive Bayes_manual_only.pkl  Random Forest_TFIDF.pkl  SVM_TFIDF.pkl  XGBoost_TFIDF.pkl
src/: 0_Procesamiento de Datos.ipynb  1_Análisis Explorativo de Datos.ipynb  2_EDA hipotesis testing.ipynb  3_Feature Exploration.ipynb  4_ModelEval-TFIDF.ipynb  5_ModelEval-RoBERTa.ipynb  6_Evaluacion de modelos.ipynb  Análisis Explorativo de Datos.ipynb  ChatGPT-Eval.ipynb  EDA hipotesis testing.ipynb  EDA.ipynb  Entrenamiento de Modelos.ipynb  Evaluacion de modelos.ipynb  Feature Exploration.ipynb  Feature Extraction.ipynb  Hyperparameter Tunning EDA.ipynb  Hyperparameter Tunning-KNN.ipynb  Hyperparameter Tunning-LigthGBM.ipynb  Hyperparameter Tunning-LogReg.ipynb  Hyperparameter Tunning-NaiveBayes.ipynb  Hyperparameter Tunning-RF.ipynb  Hyperparameter Tunning-ROBERTa.ipynb  Hyperparameter Tunning-SVM.ipynb  Hyperparameter Tunning-XGBoost.ipynb  Inferencia.ipynb  LLM-Eval.ipynb  Model Eval - All.ipynb  ModelEval-RoBERTa.ipynb  ModelEval-TFIDF.ipynb  Procesamiento de Datos.ipynb  hyperparameter_tunning.py  utils.py
(+4 files in other folders)
